# prexus-intelligence

./: PrexusCore.txt  README.md  meteorium.go
backend/backend/apps/api-gateway/: assets.go  auth.go  claude.go  main.go  rbac.go  risk.go
backend/backend/internal/auth/: jwt.go
data-engine/python/: api.py  requirements.txt
data-engine/python/adapters/: base.py  carbon_monitor.py  firms.py  firms_viirs.py  fusion.py  open_meteo.py  openmeteo.py  planet.py
data-engine/python/core/: config.py
data-engine/python/layer0/: sources.py
data-engine/python/layer4/: feature_store.py
data-engine/python/layer5/: intelligence.py  meteorium_pipeline.py
data-engine/python/rust/: Cargo.toml
data-engine/rust/: Cargo.toml
data-engine/rust/src/: lib.rs
frontend/: index.html  meteorium.html
frontend/css/: components.css  layout.css
frontend/js/: router.js  utils.js
frontend/modules/hub/: hub.js
frontend/modules/meteorium/: ai.js  alerts.js  analysis.js  meteorium.js  pipeline.js  portfolio.js
