[package]
name        = "meteorium_engine"
version     = "2.0.0"
edition     = "2021"
description = "Meteorium Monte Carlo risk computation core — PyO3 bridge"
authors     = ["Prexus Intelligence"]

[lib]
name       = "meteorium_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.20", features = ["extension-module"] }
rand       = "0.8"
rand_distr = "0.4"
rayon      = "1.8"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
